# portia-social-media

./: README.md
backend/: .gitignore  file_loader.py  instructions.txt  main.py  pyproject.toml  requirements-deploy.txt  requirements.txt  server.py  start_server.sh  vercel.json
backend/content_types/: ContentAnalyzerTypes.py  PostCreationTypes.py  YoutubeScriptTypes.py
backend/instructions/: ContentAnalyzerInstructions.txt  PostGenerationInstructions.txt  ScriptGenerationInstructions.txt
backend/tools/: ContentAnalyzer.py  PostCreation.py  VideoCreation.py  YoutubeScript.py
frontend/: package-lock.json  package.json  start_frontend.sh
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: ContentGenerator.tsx  PerformanceAnalytics.tsx  QuickDemo.tsx  Typewriter.tsx
